--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
+    "vue-demi": "latest",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.5.1",
     "vite": "^2.9.5"
+  },
+  "resolutions": {
+    "vue-demi": "0.11.4"
   }
 }
