--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "celestial-frieght-train-calc",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,9 +18,12 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-plugin-vue": "^8.7.1",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
   },
   "resolutions": {
