--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vueform/multiselect": "^2.3.4",
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
