--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "celestial-frieght-train-calc",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier .  --write"
+    "dev": "vite",
+    "format": "prettier .  --write",
+    "preview": "vite preview --port 5050"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -32,7 +32,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.5"
+    "vite": "^2.9.9"
   },
   "resolutions": {
     "vue-demi": "0.11.4"
