--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "rollup-plugin-copy": "^3.4.0",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.9"
   },
