--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
-    "rollup-plugin-copy": "^3.4.0",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.9"
+    "vite": "v3.0.0-alpha.9"
   },
   "resolutions": {
     "vue-demi": "0.11.4"
