--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
