--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.0.24",
-    "vite": "v3.0.0-alpha.9"
+    "vite": "^5.0.11"
   },
   "resolutions": {
     "vue-demi": "0.11.4"
